syntax = "proto3";

package proto;
option go_package = "./;pb";

import "empty.proto";
import "flight.proto";
import "date.proto";

service MyCustomer {
    rpc CreateCustomer(Customer) returns (Customer);
    rpc UpdateCustomer(Customer) returns (Customer);
    rpc CustomerDetails(FindCustomerRequest) returns (Customer);
    rpc ChangeCustomerPassword(ChangeCustomerPasswordRequest) returns (Empty);
    rpc ViewCustomerBookingHistories(ViewCustomerBookingHistoriesRequest) returns (ViewCustomerBookingHistoriesResponse);
}

message Customer {
    string id = 1;
    string name = 2;
    Date date_of_birth = 3;
    string address = 4;
    string email = 5;
    string password = 6;
}

message ChangeCustomerPasswordRequest {
    string id = 1;
    string old_password = 2;
    string new_password = 3;
}

message FindCustomerRequest {
    string id = 1;
}

message ViewCustomerBookingHistoriesRequest {
    string id = 1;
}

message ViewBooking {
    string booking_code = 1;
    Date booking_date = 2;
    Flight flight = 3;
}

message ViewCustomerBookingHistoriesResponse {
    repeated ViewBooking bookings = 1;
}