package handler

import (
	"go-training/clients/rest/customer/request"
	"go-training/clients/rest/customer/response"
	"go-training/pb"
	"net/http"

	"github.com/gin-gonic/gin"
	"github.com/go-playground/validator/v10"
	"github.com/jinzhu/copier"
)

type ICustomerApiHandler interface {
	CreateCustomer(c *gin.Context)
	UpdateCustomer(c *gin.Context)
	ChangeCustomerPassword(c *gin.Context)
	ViewCustomerBookingHistories(c *gin.Context)
}

type CustomerApiHandler struct {
	myCustomerClient pb.MyCustomerClient
}

func (h *CustomerApiHandler) CreateCustomer(c *gin.Context) {
	req := request.CreateCustomerRequest{}

	if err := c.ShouldBind(&req); err != nil {
		if validateErrors, ok := err.(validator.ValidationErrors); ok {
			errMessages := make([]string, 0)
			for _, v := range validateErrors {
				errMessages = append(errMessages, v.Error())
			}

			c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{
				"status": http.StatusText(http.StatusBadRequest),
				"error":  errMessages,
			})
			return
		}

		c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{
			"status": http.StatusText(http.StatusBadRequest),
			"error":  err.Error(),
		})

		return
	}

	pReq := &pb.Customer{}
	err := copier.Copy(&pReq, req)

	if err != nil {
		c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{
			"status": http.StatusText(http.StatusInternalServerError),
			"error":  err.Error(),
		})
		return
	}
	// dob, err := time.Parse(time.RFC3339, c.Param("date_of_birth"))
	// if err != nil {
	// 	c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{
	// 		"status": http.StatusText(http.StatusInternalServerError),
	// 		"error":  err.Error(),
	// 	})
	// 	return
	// }

	pReq.DateOfBirth = &pb.Date{
		Year:  1990,
		Month: 10,
		Day:   10,
	}

	pRes, err := h.myCustomerClient.CreateCustomer(c.Request.Context(), pReq)
	if err != nil {
		c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{
			"status": http.StatusText(http.StatusInternalServerError),
			"error":  err.Error(),
		})
		return
	}

	dto := &response.Customer{}
	err = copier.Copy(dto, pRes)

	if err != nil {
		c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{
			"status": http.StatusText(http.StatusInternalServerError),
			"error":  err.Error(),
		})
		return
	}

	c.JSON(http.StatusOK, gin.H{
		"status":  http.StatusText(http.StatusOK),
		"payload": dto,
	})

}
func (h *CustomerApiHandler) UpdateCustomer(c *gin.Context) {
	req := request.UpdateCustomerRequest{}

	if err := c.ShouldBind(&req); err != nil {
		if validateErrors, ok := err.(validator.ValidationErrors); ok {
			errMessages := make([]string, 0)
			for _, v := range validateErrors {
				errMessages = append(errMessages, v.Error())
			}

			c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{
				"status": http.StatusText(http.StatusBadRequest),
				"error":  errMessages,
			})
			return
		}

		c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{
			"status": http.StatusText(http.StatusBadRequest),
			"error":  err.Error(),
		})

		return
	}

	pReq := &pb.Customer{}
	err := copier.Copy(&pReq, req)

	if err != nil {
		c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{
			"status": http.StatusText(http.StatusInternalServerError),
			"error":  err.Error(),
		})
		return
	}
	// dob, err := time.Parse(time.RFC3339, c.Param("date_of_birth"))
	// if err != nil {
	// 	c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{
	// 		"status": http.StatusText(http.StatusInternalServerError),
	// 		"error":  err.Error(),
	// 	})
	// 	return
	// }

	pReq.DateOfBirth = &pb.Date{
		Year:  1990,
		Month: 10,
		Day:   10,
	}

	pRes, err := h.myCustomerClient.UpdateCustomer(c.Request.Context(), pReq)
	if err != nil {
		c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{
			"status": http.StatusText(http.StatusInternalServerError),
			"error":  err.Error(),
		})
		return
	}

	dto := &response.Customer{}
	err = copier.Copy(dto, pRes)

	if err != nil {
		c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{
			"status": http.StatusText(http.StatusInternalServerError),
			"error":  err.Error(),
		})
		return
	}

	c.JSON(http.StatusOK, gin.H{
		"status":  http.StatusText(http.StatusOK),
		"payload": dto,
	})

}
func (h *CustomerApiHandler) ChangeCustomerPassword(c *gin.Context) {
	req := request.ChangeCustomerPasswordRequest{}

	if err := c.ShouldBind(&req); err != nil {
		if validateErrors, ok := err.(validator.ValidationErrors); ok {
			errMessages := make([]string, 0)
			for _, v := range validateErrors {
				errMessages = append(errMessages, v.Error())
			}

			c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{
				"status": http.StatusText(http.StatusBadRequest),
				"error":  errMessages,
			})
			return
		}

		c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{
			"status": http.StatusText(http.StatusBadRequest),
			"error":  err.Error(),
		})

		return
	}

	pReq := &pb.ChangeCustomerPasswordRequest{}
	err := copier.Copy(&pReq, req)

	if err != nil {
		c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{
			"status": http.StatusText(http.StatusInternalServerError),
			"error":  err.Error(),
		})
		return
	}

	_, err = h.myCustomerClient.ChangeCustomerPassword(c.Request.Context(), pReq)
	if err != nil {
		c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{
			"status": http.StatusText(http.StatusInternalServerError),
			"error":  err.Error(),
		})
		return
	}

	c.JSON(http.StatusOK, gin.H{
		"status":  http.StatusText(http.StatusOK),
		"payload": "",
	})

}
func (h *CustomerApiHandler) ViewCustomerBookingHistories(c *gin.Context) {

	id := c.Param("id")
	pReq := &pb.ViewCustomerBookingHistoriesRequest{
		Id: id,
	}
	pRes, err := h.myCustomerClient.ViewCustomerBookingHistories(c.Request.Context(), pReq)
	if err != nil {
		c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{
			"status": http.StatusText(http.StatusInternalServerError),
			"error":  err.Error(),
		})
		return
	}

	dto := &response.CustomerBookingHistories{}
	err = copier.Copy(dto, pRes)

	c.JSON(http.StatusOK, gin.H{
		"status":  http.StatusText(http.StatusOK),
		"payload": dto,
	})
}

func NewCustomerApiHandler(myCustomerClient pb.MyCustomerClient) ICustomerApiHandler {
	return &CustomerApiHandler{
		myCustomerClient: myCustomerClient,
	}
}
